removed old file and updated printer.cfg to consolidate moves for purging

--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -290,7 +290,6 @@ gcode:
 
 
 
-
 [gcode_macro START_EXTRUDER]  ; Select and initiate extruder
 gcode:
   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|float %} 
@@ -330,37 +329,6 @@ gcode:
 
 
 
-[gcode_macro PURGE_BUCKET]
-gcode:
- #Absolute Coordinates
- G90
- #Move to Scrape Area
- G0 X310 F3000
- #Use Relative Extrusion
- M83
- #Extrude amount for scrape
- G1 E93 F2000
- G1 E25 F100
- G1 E5 F85
- #Quick Retract to stop filament ooze
- G1 E-7 F1500
- #wait 3 seconds to allow for ooze
- G4 P3000
- #Scrape Material
- G0 X140 F8000
- #Realtive Coordinates
- G91
- #Lower Z
-   # G1 Z-5 F480 # remove me
- #Wait for current moves to finish
- M400 
- #Extrude Amount Ready for Print
- G1 E6 F450
- #Reset Extruder
- G92 E0
- #Use Absolute Coordinates
- G90
-
 
 [gcode_macro COMPARE_EXTRUDER]
 gcode:
@@ -378,14 +346,52 @@ gcode:
     
 
 
+
 [gcode_macro END_EXTRUDER]
 gcode:
   M118 Changing Filament...
   G92 E0 ;reset extruder distance
   G1 F1500 E-5 ;short retract
-  G1 F2400 X250 Y220
+  G1 F3000 X310
   G1 F3000 E-93  ;long retract for filament removal
   G92 E0 ;reset extruder distance
+  G90
+
+
+
+[gcode_macro PURGE_BUCKET]
+gcode:
+  #Realtive Coordinates
+  G91
+  # Move up a bit
+  G0 Z5 F3000
+  #Absolute Coordinates
+  G90
+  #Move to Scrape Area
+  G0 X310 F3000
+  #Use Relative Extrusion
+  M83
+  #Extrude amount for scrape
+  G1 E93 F2000
+  G1 E25 F100
+  G1 E5 F85
+  #Quick Retract to stop filament ooze
+  G1 E-7 F1500
+  #wait 3 seconds to allow for ooze
+  G4 P3000
+  # Scrape Material
+  # G0 X140 F8000
+  #Realtive Coordinates
+  G91
+  #Lower Z
+  G1 Z-5 F480
+  #Wait for current moves to finish
+  M400 
+  #Extrude Amount Ready for Print
+  G1 E6 F450
+  #Reset Extruder
+  G92 E0
+  #Use Absolute Coordinates
   G90
 
 
