Added the custom count.

--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -118,6 +118,8 @@ sensor_pin: PK5
 min_temp: 0
 max_temp: 265
 max_extrude_only_distance: 130.0
+max_extrude_cross_section: 5
+min_extrude_temp: 180
 # pressure_advance: 1.0
 # pressure_advance_smooth_time: 0.040 
 
@@ -155,6 +157,31 @@ gcode:
   ACTIVATE_EXTRUDER EXTRUDER="extruder"
 
 
+
+[gcode_macro LOAD_COUNT]
+variable_count_var: 0
+gcode:  
+  # Keeping track of when filament was loaded
+  # M118 Current {count_var}
+    
+
+[gcode_macro ADD_COUNT]
+gcode:
+  # Adding 1 when filament is loaded
+  {% set CURRENT_VAR = printer["gcode_macro LOAD_COUNT"].count_var %}
+  SET_GCODE_VARIABLE MACRO=LOAD_COUNT VARIABLE=count_var VALUE={CURRENT_VAR + 1}
+
+
+[gcode_macro RESET_COUNT]
+gcode:
+  # Resetting cound
+  {% set CURRENT_VAR = 0 %}
+  SET_GCODE_VARIABLE MACRO=LOAD_COUNT VARIABLE=count_var VALUE={CURRENT_VAR}
+
+  
+
+
+
 [gcode_macro SET_FILL_LEFT]  ; Macro to set the start position for left extruder
 gcode:
   # Prepare for filament purge (left extruder assumed)
@@ -163,17 +190,17 @@ gcode:
   M118 Setting Left Extruder Filiment Start Posision...  
 
   # Temperature pre-heating
-  G90                       ; Set absolute positioning mode (common practice)
-  T0                        ; Select extruder 0 (left extruder)
-  M109 S200                 ; Set hotend temperature to 200°C (adjust based on filament)
+  G90 ; Set absolute positioning mode (common practice)
+  T0 ; Select extruder 0 (left extruder)
+  M109 S200 ; Set hotend temperature to 200°C (adjust based on filament)
 
   # Backoff and reset filament (purging)
-  G92 E0                    ; Reset extruder position to 0
-  G1 F3000 E-93             ; Extrude filament backwards by 93mm at 3000mm/min (adjust for purge)
-  G92 E0                    ; Reset extruder position to 0 again
+  G92 E0 ; Reset extruder position to 0
+  G1 F3000 E-93 ; Extrude filament backwards by 93mm at 3000mm/min (adjust for purge)
+  G92 E0 ; Reset extruder position to 0 again
 
   # Cool down and end (might be unnecessary depending on usage)
-  M104 S0                   ; Set hotend temperature to 0°C (adjust if needed)
+  M104 S0 ; Set hotend temperature to 0°C (adjust if needed)
 
   # Informational message - filament start position set
   M118 Set Filiment Start Posision Completed...
@@ -189,20 +216,21 @@ gcode:
   M118 Setting Right Extruder Filiment Start Posision...  
 
   # Temperature pre-heating
-  G90                       ; Set absolute positioning mode (common practice)
-  T1                        ; Select extruder 1 (likely right extruder)
-  M109 S200                 ; Set hotend temperature to 200°C (adjust based on filament)
+  G90 ; Set absolute positioning mode (common practice)
+  T1 ; Select extruder 1 (likely right extruder)
+  M109 S200 ; Set hotend temperature to 200°C (adjust based on filament)
 
   # Backoff and reset filament (purging)
-  G92 E0                    ; Reset extruder position to 0
-  G1 F3000 E-93             ; Extrude filament backwards by 93mm at 3000mm/min (adjust for purge)
-  G92 E0                    ; Reset extruder position to 0 again
+  G92 E0 ; Reset extruder position to 0
+  G1 F3000 E-93 ; Extrude filament backwards by 93mm at 3000mm/min (adjust for purge)
+  G92 E0 ; Reset extruder position to 0 again
 
   # Cool down and end (might be unnecessary depending on usage)
-  M104 S0                   ; Set hotend temperature to 0°C (adjust if needed)
+  M104 S0 ; Set hotend temperature to 0°C (adjust if needed)
 
   # Informational message - filament start position set
   M118 Set Filiment Start Posision Completed...
+  
 
 
 
@@ -213,6 +241,8 @@ gcode:
   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|float %}
   {% set INITIAL_EXTRUDER = params.START_EXTRUDER|default(0)|int %}
   {% set SLICER = params.PRINT_TYPE|default("default")|string %}
+  
+  RESET_COUNT # Reset Filamine Load Counter
 
   # Units and fans
   G21 ; mm units
@@ -234,27 +264,18 @@ gcode:
   # Filament loading (Orca only)
   {% if SLICER == "orca" %}
     M118 Loading filament for Orca
-    M83 ; Relative extrusion mode
-    G1 Z5 F240 ; Move to Z height
-    G1 X10 Y20 F3000 ; Move to position
-    G1 E93 F2000 ; Extrude filament (relative)
-    G92 E0 ; Reset to absolute mode
+    LOAD_FILAMENT
+    # M83 ; Relative extrusion mode
+    # G1 Z5 F240 ; Move to Z height
+    # G1 X10 Y20 F3000 ; Move to position
+    # G1 E93 F2000 ; Extrude filament (relative)
+    # G92 E0 ; Reset to absolute mode
+    LINE_PURGE
   {% else %}
     M118 You are using CURA, Nothing to do... Continue
     # No specific actions for Cura (placeholder)
   {% endif %}
-
-  # Pre-prime
-  G1 F3000 X5 Y10 Z0.2 ; Move to prime position
-  G92 E0 ; Reset extrusion
-
-  # Final prime
-  G1 F600 X160 E5 ; Prime nozzle
-  G1 F5000 X180 ; Wipe
-  G92 E0 ; Reset extrusion
-
-
-
+  
 
 
 
@@ -294,40 +315,37 @@ gcode:
 gcode:
   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|float %} 
   {% set EXTRUDER_NR = params.EXTRUDER|default(0)|int %}  
+  {% set CURRENT_VAR = printer["gcode_macro LOAD_COUNT"].count_var %} # Get passed current Extruder load Count
 
-  M118 Loading Extruder T{EXTRUDER_NR}...
+  {% if CURRENT_VAR == 0 %}
+    M118 Loading Filament Cura...
+    SET_GCODE_VARIABLE MACRO=LOAD_COUNT VARIABLE=count_var VALUE={CURRENT_VAR + 1}
+    LOAD_FILAMENT
+    M104 S{EXTRUDER_TEMP} ; Set extruder temperature 
+    LINE_PURGE
+  {% else %}
+    PURGE_BUCKET
+  {% endif %}
+
+
+
+# Wipe Before printing
+[gcode_macro WIPE]
+gcode:
+  G90
+  G1 X295 F6000 ; Wipe
+  G1 X310 F6000 ; Wipe
+  G1 X295 F6000 ; Wipe
+  G1 X310 F6000 ; Wipe
+  G1 X295 F6000 ; Wipe
+  G1 X310 F6000 ; Wipe
+
+# Load Filament
+[gcode_macro LOAD_FILAMENT]
+gcode:
   G92 E0 ; Reset extruder distance
   G1 F2000 E93 ; Load filament
   G92 E0 ; Reset extruder distance again
-  M104 S{EXTRUDER_TEMP} ; Set extruder temperature
-
-
-
-
-# Not using at the moment
-[gcode_macro WIPE_EXTRUDER]
-gcode:
-  M118 <--- Load filament and Wipe --->
-  M114  ;Get current position
-  {% set OLDX = printer.gcode_move.position.x %}
-  {% set OLDZ = printer.gcode_move.position.z %}
-  M118 Head Up 5mm
-  G0 Z{OLDZ +5} F5000.0
-  M118 Move head to bin at right side
-  G0 X310 F5000.0 
-  M118 Extrude 80mm
-  G1 F3000 E88 ; Load Filament
-  G92 E0 ;reset extruder distance
-  G1 F250 E25 ;load and extract filament
-  G92 E0 ;reset extruder distance
-  G1 F3000 E-5 ; retract
-  G92 E0 ;reset extruder distance
-  G0 X{OLDX} F5000.0 
-  M118 Move head To old Position
-  G0 Z{OLDZ} F5000.0 
-  M118 Head Down, Ready to print, Wipe End
-
-
 
 
 [gcode_macro COMPARE_EXTRUDER]
@@ -351,7 +369,7 @@ gcode:
 gcode:
   M118 Changing Filament...
   G92 E0 ;reset extruder distance
-  G1 F1500 E-5 ;short retract
+  G1 F2000 E-5 ;short retract
   G1 F3000 X310
   G1 F3000 E-93  ;long retract for filament removal
   G92 E0 ;reset extruder distance
@@ -361,34 +379,26 @@ gcode:
 
 [gcode_macro PURGE_BUCKET]
 gcode:
-  #Realtive Coordinates
-  G91
-  # Move up a bit
-  G0 Z5 F3000
   #Absolute Coordinates
   G90
   #Move to Scrape Area
-  G0 X310 F3000
+  G0 X310 F6000
   #Use Relative Extrusion
   M83
   #Extrude amount for scrape
-  G1 E93 F2000
+  G1 E93 F3000
   G1 E25 F100
   G1 E5 F85
   #Quick Retract to stop filament ooze
-  G1 E-7 F1500
+  G1 E-5 F3000
   #wait 3 seconds to allow for ooze
-  G4 P3000
+  G4 P1500
   # Scrape Material
-  # G0 X140 F8000
-  #Realtive Coordinates
-  G91
-  #Lower Z
-  G1 Z-5 F480
+  WIPE
   #Wait for current moves to finish
   M400 
   #Extrude Amount Ready for Print
-  G1 E6 F450
+  # G1 E6 F450
   #Reset Extruder
   G92 E0
   #Use Absolute Coordinates
@@ -507,11 +517,11 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.171250, 0.076250, 0.080000, 0.183750, 0.145000
-#*# 	  0.237500, 0.102500, 0.081250, 0.098750, 0.043750
-#*# 	  0.198750, 0.078750, 0.068750, 0.092500, 0.055000
-#*# 	  0.121250, 0.018750, -0.018750, 0.075000, 0.030000
-#*# 	  -0.013750, -0.130000, -0.103750, -0.006250, 0.006250
+#*# 	  0.055000, 0.015000, -0.027500, -0.005000, -0.021250
+#*# 	  0.098750, 0.013750, 0.015000, 0.055000, 0.060000
+#*# 	  0.088750, 0.013750, 0.056250, 0.098750, 0.050000
+#*# 	  0.065000, 0.058750, 0.042500, 0.123750, 0.123750
+#*# 	  -0.028750, -0.041250, 0.003750, 0.081250, 0.107500
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
@@ -519,9 +529,9 @@ gcode:
 #*# algo = lagrange
 #*# tension = 0.2
 #*# min_x = 49.0
-#*# max_x = 284.03999999999996
-#*# min_y = 20.0
-#*# max_y = 230.0
+#*# max_x = 272.24
+#*# min_y = 29.33
+#*# max_y = 226.09
 #*#
 #*# [input_shaper]
 #*# shaper_type_y = mzv
