--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -157,29 +157,19 @@ gcode:
   ACTIVATE_EXTRUDER EXTRUDER="extruder"
 
 
-
-[gcode_macro LOAD_COUNT]
-variable_count_var: 0
-gcode:  
-  # Keeping track of when filament was loaded
-  # M118 Current {count_var}
-    
-
-[gcode_macro ADD_COUNT]
+[gcode_macro M0]
 gcode:
-  # Adding 1 when filament is loaded
-  {% set CURRENT_VAR = printer["gcode_macro LOAD_COUNT"].count_var %}
-  SET_GCODE_VARIABLE MACRO=LOAD_COUNT VARIABLE=count_var VALUE={CURRENT_VAR + 1}
+  PAUSE
 
 
-[gcode_macro RESET_COUNT]
-gcode:
-  # Resetting cound
-  {% set CURRENT_VAR = 0 %}
-  SET_GCODE_VARIABLE MACRO=LOAD_COUNT VARIABLE=count_var VALUE={CURRENT_VAR}
-
+[gcode_macro FILAMENT_LOADED]
+# Flag to indicate if filament is loaded
+variable_filament_loaded: False
   
-
+gcode:
+  # Set filament_loaded to True when filament is loaded
+  SET_GCODE_VARIABLE MACRO=FILAMENT_LOADED VARIABLE=filament_loaded VALUE=True
+  
 
 
 [gcode_macro SET_FILL_LEFT]  ; Macro to set the start position for left extruder
@@ -242,7 +232,8 @@ gcode:
   {% set INITIAL_EXTRUDER = params.START_EXTRUDER|default(0)|int %}
   {% set SLICER = params.PRINT_TYPE|default("default")|string %}
   
-  RESET_COUNT # Reset Filamine Load Counter
+  # Reset filament loaded flag
+  SET_GCODE_VARIABLE MACRO=FILAMENT_LOADED VARIABLE=filament_loaded VALUE=False
 
   # Units and fans
   G21 ; mm units
@@ -315,13 +306,14 @@ gcode:
 gcode:
   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|float %} 
   {% set EXTRUDER_NR = params.EXTRUDER|default(0)|int %}  
-  {% set CURRENT_VAR = printer["gcode_macro LOAD_COUNT"].count_var %} # Get passed current Extruder load Count
+  # {% set CURRENT_VAR = printer["gcode_macro LOAD_COUNT"].count_var %} # Get passed current Extruder load Count
 
-  {% if CURRENT_VAR == 0 %}
+  {% if not printer["gcode_macro FILAMENT_LOADED"].filament_loaded %}
     M118 Loading Filament Cura...
-    SET_GCODE_VARIABLE MACRO=LOAD_COUNT VARIABLE=count_var VALUE={CURRENT_VAR + 1}
     LOAD_FILAMENT
     M104 S{EXTRUDER_TEMP} ; Set extruder temperature 
+    # Set filament_loaded to True after successful loading
+    SET_GCODE_VARIABLE MACRO=FILAMENT_LOADED VARIABLE=filament_loaded VALUE=True
     LINE_PURGE
   {% else %}
     PURGE_BUCKET
@@ -440,101 +432,3 @@ gcode:
 [gcode_macro G29]
 gcode:
   BED_MESH_CALIBRATE
-
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [bltouch]
-#*# z_offset = 2.185
-#*#
-#*# [extruder]
-#*# control = pid
-#*# pid_kp = 20.389
-#*# pid_ki = 1.162
-#*# pid_kd = 89.459
-#*#
-#*# [heater_bed]
-#*# control = pid
-#*# pid_kp = 67.894
-#*# pid_ki = 1.734
-#*# pid_kd = 664.512
-#*#
-#*# [bed_mesh default-old]
-#*# version = 1
-#*# points =
-#*# 	0.176250, 0.075000, 0.060000, 0.063750, -0.028750
-#*# 	0.140000, 0.042500, 0.035000, 0.032500, -0.053750
-#*# 	0.143750, 0.047500, 0.037500, 0.035000, -0.038750
-#*# 	0.178750, 0.066250, 0.048750, 0.023750, -0.048750
-#*# 	0.118750, 0.042500, 0.030000, 0.037500, -0.018750
-#*# min_x = 49.0
-#*# max_x = 294.0
-#*# min_y = 20.0
-#*# max_y = 230.0
-#*# x_count = 5
-#*# y_count = 5
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = lagrange
-#*# tension = 0.2
-#*#
-#*# [bed_mesh default-12-13]
-#*# version = 1
-#*# points =
-#*# 	0.051250, 0.037500, 0.057500
-#*# 	0.058750, 0.052500, 0.068750
-#*# 	0.031250, 0.048750, 0.053750
-#*# min_x = 140.2
-#*# max_x = 159.9
-#*# min_y = 115.1
-#*# max_y = 134.79
-#*# x_count = 3
-#*# y_count = 3
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = lagrange
-#*# tension = 0.2
-#*#
-#*# [bed_mesh default-1-29-2024]
-#*# version = 1
-#*# points =
-#*# 	0.218750, 0.112500, 0.091250, 0.126250, 0.137500
-#*# 	0.235000, 0.110000, 0.078750, 0.068750, 0.075000
-#*# 	0.138750, 0.041250, 0.060000, 0.171250, 0.107500
-#*# 	0.136250, 0.003750, 0.035000, 0.060000, 0.072500
-#*# 	0.012500, -0.090000, -0.105000, -0.088750, -0.016250
-#*# x_count = 5
-#*# y_count = 5
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = bicubic
-#*# tension = 0.2
-#*# min_x = 49.0
-#*# max_x = 294.0
-#*# min_y = 20.0
-#*# max_y = 230.0
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	  0.055000, 0.015000, -0.027500, -0.005000, -0.021250
-#*# 	  0.098750, 0.013750, 0.015000, 0.055000, 0.060000
-#*# 	  0.088750, 0.013750, 0.056250, 0.098750, 0.050000
-#*# 	  0.065000, 0.058750, 0.042500, 0.123750, 0.123750
-#*# 	  -0.028750, -0.041250, 0.003750, 0.081250, 0.107500
-#*# x_count = 5
-#*# y_count = 5
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = lagrange
-#*# tension = 0.2
-#*# min_x = 49.0
-#*# max_x = 272.24
-#*# min_y = 29.33
-#*# max_y = 226.09
-#*#
-#*# [input_shaper]
-#*# shaper_type_y = mzv
-#*# shaper_freq_y = 30.2
-#*# shaper_type_x = mzv
-#*# shaper_freq_x = 85.8
